Align the pin image to the right (issue 5720)

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -371,6 +371,7 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
     height: 16px;
     border: none;
     cursor: pointer;
+    margin: 3px;
 }
 
 .fbQuickInfoPin:hover:active {
